Now about 4000 books, we can go to the next step

--- a/Library.ipynb
+++ b/Library.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test the request system"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -199,60 +206,279 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Search for rowling\n",
-      "Search for pierre bottero\n",
-      "Search for Robin Hobb\n",
-      "Search for Maxime Chattam\n",
-      "Search for Valérie Perrin\n",
-      "Search for Franck Thilliez\n",
-      "Search for Amélie Jeannot\n",
-      "Search for Stephenie Meyer\n",
-      "Search for Tolkien\n",
-      "Search for Brandon Sanderson\n",
-      "Search for Robert Jordan\n",
-      "Search for Terry Pratchett\n",
-      "Search for Lovecraft\n",
-      "Search for Stephen King\n",
-      "Search for Patrick Rothfuss\n",
-      "Search for Neil Gaiman\n",
-      "Search for Lewis\n",
-      "Search for Terry Brooks\n",
-      "Search for Ray Bradbury\n",
-      "Search for Roald Dahl\n",
-      "Search for George Martin\n",
-      "Search for David Eddings\n",
       "Search for Lewis Carrol\n",
+      "No results for this\n",
+      "No result for this\n",
+      "() {'author': 'Lewis Carrol'}\n",
+      "Search for rowling\n",
+      "Fetched 57 books\n",
+      "Added 2 in the library\n",
+      "Filter already_in_library expelled 32 books\n",
+      "Filter language_not_fr expelled 21 books\n",
+      "Filter not_identifiants expelled 2 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for pierre bottero\n",
+      "Fetched 58 books\n",
+      "Added 1 in the library\n",
+      "Filter already_in_library expelled 54 books\n",
+      "Filter language_not_fr expelled 3 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Robin Hobb\n",
+      "Fetched 85 books\n",
+      "Added 1 in the library\n",
+      "Filter already_in_library expelled 78 books\n",
+      "Filter language_not_fr expelled 4 books\n",
+      "Filter not_identifiants expelled 2 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Maxime Chattam\n",
+      "Fetched 43 books\n",
+      "Added 1 in the library\n",
+      "Filter already_in_library expelled 40 books\n",
+      "Filter language_not_fr expelled 2 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Valérie Perrin\n",
+      "Fetched 10 books\n",
+      "Added 1 in the library\n",
+      "Filter already_in_library expelled 7 books\n",
+      "Filter not_identifiants expelled 1 books\n",
+      "Filter language_not_fr expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Franck Thilliez\n",
+      "Fetched 54 books\n",
+      "Added 40 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter language_not_fr expelled 4 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Amélie Jeannot\n",
+      "Fetched 1 books\n",
+      "Added 0 in the library\n",
+      "Filter already_in_library expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Stephenie Meyer\n",
+      "Fetched 26 books\n",
+      "Added 13 in the library\n",
+      "Filter already_in_library expelled 12 books\n",
+      "Filter language_not_fr expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Tolkien\n",
+      "Fetched 44 books\n",
+      "Added 20 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter language_not_fr expelled 14 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Brandon Sanderson\n",
+      "Fetched 37 books\n",
+      "Added 24 in the library\n",
+      "Filter already_in_library expelled 11 books\n",
+      "Filter language_not_fr expelled 2 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Robert Jordan\n",
+      "Fetched 43 books\n",
+      "Added 22 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter not_identifiants expelled 2 books\n",
+      "Filter language_not_fr expelled 9 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Terry Pratchett\n",
+      "Fetched 86 books\n",
+      "Added 64 in the library\n",
+      "Filter already_in_library expelled 11 books\n",
+      "Filter language_not_fr expelled 10 books\n",
+      "Filter not_identifiants expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Lovecraft\n",
+      "Fetched 91 books\n",
+      "Added 69 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter not_identifiants expelled 3 books\n",
+      "Filter language_not_fr expelled 9 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Stephen King\n",
+      "Fetched 118 books\n",
+      "Added 89 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter language_not_fr expelled 19 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Patrick Rothfuss\n",
+      "Fetched 8 books\n",
+      "Added 0 in the library\n",
+      "Filter already_in_library expelled 6 books\n",
+      "Filter language_not_fr expelled 2 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Neil Gaiman\n",
+      "Fetched 32 books\n",
+      "Added 14 in the library\n",
+      "Filter already_in_library expelled 11 books\n",
+      "Filter language_not_fr expelled 6 books\n",
+      "Filter author_not_found expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Lewis\n",
+      "Fetched 402 books\n",
+      "Added 212 in the library\n",
+      "Filter not_identifiants expelled 123 books\n",
+      "Filter already_in_library expelled 6 books\n",
+      "Filter language_not_fr expelled 57 books\n",
+      "Filter author_not_found expelled 4 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Terry Brooks\n",
+      "Fetched 18 books\n",
+      "Added 7 in the library\n",
+      "Filter already_in_library expelled 6 books\n",
+      "Filter author_not_found expelled 1 books\n",
+      "Filter language_not_fr expelled 4 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Ray Bradbury\n",
+      "Fetched 43 books\n",
+      "Added 21 in the library\n",
+      "Filter already_in_library expelled 8 books\n",
+      "Filter language_not_fr expelled 11 books\n",
+      "Filter not_identifiants expelled 3 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for Roald Dahl\n",
+      "Fetched 60 books\n",
+      "Added 26 in the library\n",
+      "Filter already_in_library expelled 8 books\n",
+      "Filter language_not_fr expelled 24 books\n",
+      "Filter not_identifiants expelled 2 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for George Martin\n",
+      "Fetched 98 books\n",
+      "Added 64 in the library\n",
+      "Filter already_in_library expelled 11 books\n",
+      "Filter not_identifiants expelled 2 books\n",
+      "Filter language_not_fr expelled 21 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "Search for David Eddings\n",
+      "Fetched 26 books\n",
+      "Added 13 in the library\n",
+      "Filter already_in_library expelled 5 books\n",
+      "Filter language_not_fr expelled 8 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Steven Erikson\n",
+      "Fetched 9 books\n",
+      "Added 1 in the library\n",
+      "Filter already_in_library expelled 7 books\n",
+      "Filter language_not_fr expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Rick Riordan\n",
+      "Fetched 38 books\n",
+      "Added 23 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter language_not_fr expelled 5 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Andrzej Sapkowski\n",
+      "Fetched 30 books\n",
+      "Added 12 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter language_not_fr expelled 8 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Terry Goodkind\n",
+      "Fetched 35 books\n",
+      "Added 19 in the library\n",
+      "Filter already_in_library expelled 11 books\n",
+      "Filter language_not_fr expelled 5 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Isaac Asimov\n",
+      "Fetched 85 books\n",
+      "Added 41 in the library\n",
+      "Filter already_in_library expelled 10 books\n",
+      "Filter language_not_fr expelled 33 books\n",
+      "Filter not_identifiants expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Christopher Paolini\n",
+      "Fetched 11 books\n",
+      "Added 4 in the library\n",
+      "Filter already_in_library expelled 6 books\n",
+      "Filter language_not_fr expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for David Gemmell\n",
+      "Fetched 46 books\n",
+      "Added 31 in the library\n",
+      "Filter already_in_library expelled 12 books\n",
+      "Filter language_not_fr expelled 3 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Anthony Horowitz\n",
+      "Fetched 61 books\n",
+      "Added 45 in the library\n",
+      "Filter already_in_library expelled 11 books\n",
+      "Filter not_identifiants expelled 2 books\n",
+      "Filter language_not_fr expelled 3 books\n",
+      "\n",
+      "\n",
+      "\n",
       "Search for Sarah Maas\n",
-      "                                     title\n",
-      "0      Harry Potter à L'école des Sorciers\n",
-      "1  Harry Potter et les Reliques de la Mort\n",
-      "2  Harry Potter et le Prisonnier d'Azkaban\n",
-      "3        Harry Potter et l’Ordre du Phénix\n",
-      "4   Harry Potter et le Prince de Sang-Melé\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'librar' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-c36dd40e2871>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0mlibrary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_library\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlibrary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlibrary\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlibrar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'librar' is not defined"
+      "Fetched 12 books\n",
+      "Added 2 in the library\n",
+      "Filter already_in_library expelled 9 books\n",
+      "Filter language_not_fr expelled 1 books\n",
+      "\n",
+      "\n",
+      "\n",
+      "(1339, 11)\n"
      ]
     }
    ],
    "source": [
     "TO_SEARCH = [\n",
+    "    \"Lewis Carrol\",\n",
     "    \"rowling\",\n",
     "    \"pierre bottero\",\n",
     "    \"Robin Hobb\",\n",
@@ -275,7 +501,6 @@
     "    \"Roald Dahl\",\n",
     "    \"George Martin\",\n",
     "    \"David Eddings\",\n",
-    "    \"Lewis Carrol\",\n",
     "    \"Steven Erikson\",\n",
     "    \"Rick Riordan\",\n",
     "    \"Andrzej Sapkowski\",\n",
@@ -291,7 +516,7 @@
     "    print(f\"Search for {search}\")\n",
     "    library.fetch(author=search)\n",
     "library.save_library()\n",
-    "print(library.library[['title']].head())"
+    "print(library.library.shape)"
    ]
   },
   {
